Everything working except for a few cosmetic bugs and the contact me form.  See readme for to-do list.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 <!--Logo-->
 <div class="jumbotron">
-  <img src="assets/images/COA_MontessoriGuide.svg" id="logoimg">
+  <img src="https://raw.githubusercontent.com/REvanCof/COAMG/master/public/assets/img/COA_MontessoriGuide.jpg" id="logoimg">
 </div>
 
 <!--Header, with links to Home, About Me, Resources, and Projects-->
