--- a/public/resources.html
+++ b/public/resources.html
@@ -17,7 +17,7 @@
 
 <!--Logo-->
 <div class="jumbotron">
-  <img src="assets/images/COA_MontessoriGuide.svg" id="logoimg">
+  <img src="https://raw.githubusercontent.com/REvanCof/COAMG/master/public/assets/img/COA_MontessoriGuide.jpg" id="logoimg">
 </div>
 	
 <!--Header, with links to Home, About Me, Resources, and Projects-->
@@ -37,17 +37,17 @@
 		<br>
 		<p>
 		Association of Montessori International's official website:<br>
-		<a href="https://amiusa.org">AMIUSA.org</a>
+		<a href="https://amiusa.org" target="_blank">AMIUSA.org</a>
 		</p>
 		<br>
 		<p>
 		North American Montessori Teachers' Association's official website:<br>
-		<a href="http://www.montessori-namta.org">Montessori-NAMTA.org</a>
+		<a href="http://www.montessori-namta.org" target="_blank">Montessori-NAMTA.org</a>
 		</p>
 		<br>
 		<p>
 		A website where trained Montessori guides can go to perfect their craft:<br>
-		<a href="http://montessoriguide.org/">MontessoriGuide.org</a>
+		<a href="http://montessoriguide.org/" target="_blank">MontessoriGuide.org</a>
 		</p>
 		<br>
 	</div>
