--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 <!--Logo-->
 <div class="jumbotron">
-  <img src="https://raw.githubusercontent.com/REvanCof/COAMG/master/public/assets/img/COA_MontessoriGuide.jpg" id="logoimg">
+	<img src="assets/img/COA_MontessoriGuide.svg">
 </div>
 
 <!--Header, with links to Home, About Me, Resources, and Projects-->
