Fixed logo sizing

--- a/public/resources.html
+++ b/public/resources.html
@@ -17,7 +17,7 @@
 
 <!--Logo-->
 <div class="jumbotron">
-	<img src="assets/img/COA_MontessoriGuide.svg">
+	<img id="logoPic" src="assets/img/COA_MontessoriGuide.svg">
 </div>
 	
 <!--Header, with links to Home, About Me, Resources, and Projects-->
